--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.16.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "dropzone": "^6.0.0-beta.2",
@@ -22,10 +26,11 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
